ensured brand and mobile nav are on same line on smaller devices

--- a/app/assets/stylesheets/grayscale.scss
+++ b/app/assets/stylesheets/grayscale.scss
@@ -82,7 +82,7 @@ a {
   }
   .navbar-brand {
     font-weight: 700;
-    font-size: 24px;
+    font-size: 23px;
   }
 
   a {
